docs/styles.css
/* ... */
/**
 * Constrain images and videos to the parent width and preserve
 * their instrinsic aspect ratio.
 *
 * https://github.com/mozdevs/cssremedy/issues/14
 */

img,
video {
  max-width: 100%;
  height: auto;
}

.container{
  width: 100%;
}

@media (min-width: 640px){
  .container{
    max-width: 640px;
  }
}

@media (min-width: 768px){
  .container{
    max-width: 768px;
  }
}

@media (min-width: 1024px){
  .container{
    max-width: 1024px;
  }
}

@media (min-width: 1280px){
  .container{
    max-width: 1280px;
  }
}

@media (min-width: 1440px){
  .container{
    max-width: 1440px;
  }
}

@media (min-width: 1680px){
  .container{
    max-width: 1680px;
  }
}

@media (min-width: 1920px){
  .container{
    max-width: 1920px;
  }
}

.bg-local{
  background-attachment: local;
}

.bg-gray-100{
  --bg-opacity: 1;
  background-color: #f7fafc;
  background-color: rgba(247, 250, 252, var(--bg-opacity));
}

.bg-primary{
  --bg-opacity: 1;
  background-color: #13C2C2;
  background-color: rgba(19, 194, 194, var(--bg-opacity));
}

.bg-filler{
  background-color: rgba(172, 224, 215, 0.05);
}

.hover\:bg-teal-100:hover{
  --bg-opacity: 1;
  background-color: #e6fffa;
  background-color: rgba(230, 255, 250, var(--bg-opacity));
}

.hover\:bg-primary:hover{
  --bg-opacity: 1;
  background-color: #13C2C2;
  background-color: rgba(19, 194, 194, var(--bg-opacity));
}

.border-gray-200{
  --border-opacity: 1;
  border-color: #edf2f7;
  border-color: rgba(237, 242, 247, var(--border-opacity));
}

.border-gray-400{
  --border-opacity: 1;
  border-color: #cbd5e0;
  border-color: rgba(203, 213, 224, var(--border-opacity));
}

.border-primary{
  --border-opacity: 1;
  border-color: #13C2C2;
  border-color: rgba(19, 194, 194, var(--border-opacity));
}

.border-secondary-200{
  --border-opacity: 1;
  border-color: #08979C;
  border-color: rgba(8, 151, 156, var(--border-opacity));
}

.rounded{
  border-radius: 0.25rem;
}

.rounded-full{
  border-radius: 9999px;
}

.team-icons:hover {
  box-shadow: 0px 5px 30px rgba(57, 56, 61, 0.405);
  transition: 200ms ease;
}

.border-none{
  border-style: none;
}

.border-2{
  border-width: 2px;
}

.border{
  border-width: 1px;
}

.border-t-2{
  border-top-width: 2px;
}

.border-t{
  border-top-width: 1px;
}

.border-b{
  border-bottom-width: 1px;
}

.cursor-pointer{
  cursor: pointer;
}

.inline-block{
  display: inline-block;
}

.flex{
  display: flex;
}

.grid{
  display: grid;
}

.hidden{
  display: none;
}

.flex-row-reverse{
  flex-direction: row-reverse;
}

.flex-col{
  flex-direction: column;
}

.flex-col-reverse{
  flex-direction: column-reverse;
}

.flex-wrap{
  flex-wrap: wrap;
}

.items-center{
  align-items: center;
}

.items-baseline{
  align-items: baseline;
}

.self-center{
  align-self: center;
}

.justify-start{
  justify-content: flex-start;
}

.justify-end{
  justify-content: flex-end;
}

.justify-center{
  justify-content: center;
}

.justify-between{
  justify-content: space-between;
}

.justify-around{
  justify-content: space-around;
}

.content-center{
  align-content: center;
}

.font-heading{
  font-family: 'Open Sans';
}

.font-body{
  font-family: 'Source Sans Pro';
}

.font-normal{
  font-weight: 400;
}

.font-semibold{
  font-weight: 600;
}

.font-bold{
  font-weight: 700;
}

.h-auto{
  height: auto;
}

.text-xs{
  font-size: 0.75rem;
}

.text-sm{
  font-size: 0.875rem;
}

.text-base{
  font-size: 1rem;
}

.text-lg{
  font-size: 1.125rem;
}

.text-xl{
  font-size: 1.25rem;
}

.text-2xl{
  font-size: 1.5rem;
}

.text-3xl{
  font-size: 1.875rem;
}

.text-4xl{
  font-size: 2.25rem;
}

.text-5xl{
  font-size: 3rem;
}

.my-0{
  margin-top: 0;
  margin-bottom: 0;
}

.my-2{
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.my-4{
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.mx-4{
  margin-left: 1rem;
  margin-right: 1rem;
}

.my-5{
  margin-top: 1.25rem;
  margin-bottom: 1.25rem;
}

.my-6{
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
}

.my-8{
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.my-10{
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.mx-10{
  margin-left: 2.5rem;
  margin-right: 2.5rem;
}

.my-16{
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.my-20{
  margin-top: 5rem;
  margin-bottom: 5rem;
}

.mx-auto{
  margin-left: auto;
  margin-right: auto;
}

.mb-1{
  margin-bottom: 0.25rem;
}

.mt-2{
  margin-top: 0.5rem;
}

.mr-2{
  margin-right: 0.5rem;
}

.mb-2{
  margin-bottom: 0.5rem;
}

.ml-2{
  margin-left: 0.5rem;
}

.mr-3{
  margin-right: 0.75rem;
}

.mt-4{
  margin-top: 1rem;
}

.mr-4{
  margin-right: 1rem;
}

.mb-4{
  margin-bottom: 1rem;
}

.mt-5{
  margin-top: 1.25rem;
}

.mt-6{
  margin-top: 1.5rem;
}

.mr-6{
  margin-right: 1.5rem;
}

.mb-6{
  margin-bottom: 1.5rem;
}

.mt-8{
  margin-top: 2rem;
}

.mb-8{
  margin-bottom: 2rem;
}

.mt-10{
  margin-top: 2.5rem;
}

.mb-10{
  margin-bottom: 2.5rem;
}

.mt-12{
  margin-top: 3rem;
}

.mb-12{
  margin-bottom: 3rem;
}

.mt-16{
  margin-top: 4rem;
}

.mb-16{
  margin-bottom: 4rem;
}

.mb-20{
  margin-bottom: 5rem;
}

.mb-24{
  margin-bottom: 6rem;
}

.mt-32{
  margin-top: 8rem;
}

.ml-auto{
  margin-left: auto;
}

.max-w-xs{
  max-width: 20rem;
}

.max-w-3xl{
  max-width: 48rem;
}

.max-w-screen-3xl{
  max-width: 1680px;
}

.min-h-screen{
  min-height: 100vh;
}

.object-contain{
  -o-object-fit: contain;
     object-fit: contain;
}

.overflow-hidden{
  overflow: hidden;
}

.overflow-visible{
  overflow: visible;
}

.overscroll-none{
  -ms-scroll-chaining: none;
      overscroll-behavior: none;
}

.py-0{
  padding-top: 0;
  padding-bottom: 0;
}

.py-1{
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.py-2{
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.px-3{
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.py-4{
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.px-4{
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-6{
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.py-8{
  padding-top: 2rem;
  padding-bottom: 2rem;
}
/* ... */

